--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <title>BloodStret</title>
+    <title>Bloodstret</title>
 </head>
 <body>
     <h1>Hola mundo!</h1>
+
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
