Se agregaron las imagenes y colore de fondo de las tarjetas

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
   </div>
 
   <script src="./js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
