--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
 
-  <div class="row row-cols-4">
+  <div class="row row-cols-4" id="pokemones">
     <div class="col mb-3">
       <div class="card shadow bg-primary bg-gradient rounded text-center">
         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png " class="card-img-top w-50 mx-auto" alt="...">
