--- a/index.html
+++ b/index.html
@@ -9,11 +9,40 @@
   <title>Bloodstret</title>
 </head>
 
-<body class="container">
+<body class="container-fluid">
+  <!--Inicio de la barra de navegacion  -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+  <a class="navbar-brand" href="#">Pokemon</a>
+    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+  
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">FAQs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<!--Fin de la barra de navegacion -->
 
   <div class="row mb-3">
     <div class="col">
-      <h1 class="text-center">Pokémon</h1>
+      <h1 class="text-center">Pokemon</h1>
     </div>
   </div>
 
